feat(API): filter search by commit (#334)
