# docs/reference/api/openapi.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "kodit API",
     "description": "\nThis is the REST API for the Kodit server. Please refer to the\n[Kodit documentation](https://docs.helix.ml/kodit/) for more information.\n    ",
-    "version": "0.5.14"
+    "version": "0.5.15"
   },
   "paths": {
     "/healthz": {
@@ -2561,6 +2561,21 @@
             ],
             "title": "Enrichment Subtypes",
             "description": "Enrichment subtypes to filter by (e.g., 'snippet', 'example', 'snippet_summary', 'example_summary')"
+          },
+          "commit_sha": {
+            "anyOf": [
+              {
+                "items": {
+                  "type": "string"
+                },
+                "type": "array"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Commit Sha",
+            "description": "Filter snippets by commit SHAs"
           }
         },
         "type": "object",
